# mda-tui

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  mkdocs-nav.yml  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  gh-ci.yaml  linting.yml  test_and_build.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  index.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
docs/source/_templates/: README.md
docs/transformations/: center-in-box.md  index.md  nojump.md  translate.md  unwrap.md  wrap.md
mda_tui/: __init__.py  _version.py
mda_tui/data/: files.py
mda_tui/tests/: conftest.py
search/: search_index.json
src/mda_tui/: __init__.py  __main__.py  mda-tui.tcss  validators.py
src/mda_tui/data/: mda.txt
src/mda_tui/widgets/: __init__.py  file_dialogues.py  file_selectors.py  run.py  transformations.py
tests/: conftest.py  test_mda_tui.py  test_transformations.py  utils.py
transformations/: index.html
transformations/center-in-box/: index.html
transformations/nojump/: index.html
transformations/translate/: index.html
transformations/unwrap/: index.html
transformations/wrap/: index.html
